--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-flask==2.3.3
-flask-wtf==1.1.1
-flask-socketio==5.3.6
-numpy==1.24.3
+Flask==2.3.3
+Flask-SocketIO==5.3.6
 pandas==2.0.3
+Werkzeug==2.3.7
+undetected-chromedriver>=3.5.5
+selenium>=4.15.0
 openpyxl==3.1.2
-selenium==4.15.2
-undetected-chromedriver==3.5.4
-webdriver-manager==4.0.1 
+python-socketio==5.8.0 
