--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
 Flask-SocketIO==5.3.6
-pandas==2.0.3
+pandas==2.1.4
+numpy==1.26.4
 Werkzeug==2.3.7
 undetected-chromedriver>=3.5.5
 selenium>=4.15.0
